<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BB看盘</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
	<string name="sell">卖</string>
	<string name="buy">买</string>
	<string name="doSell">卖出</string>
	<string name="doBuy">买入</string>
	
	<string name="buyPrice">买入价/￥</string>
	<string name="sellPrice">卖出价/￥</string>
	<string name="kchart">K线图</string>
	<string name="sumPrice">总额/￥</string>
	<string name="volume24">成交总额/24h</string>
	<string name="day">d</string>
	<string name="hour"></string>
	<string name="minite">分</string>
	<string name="second">秒</string>
	<string name="passed">前刷新</string>
	
	<string name="lessThan">小于</string>
	<string name="largerThan">大于</string>
	
	<string name="confirm">确认</string>
	<string name="cancel">取消</string>
	
	<string name="alarm_succ">设置成功</string>
	<string name="alarm_input_wrong">请输入正确的格式</string>
	<string name="set_alarm">报警设置</string>
	<string name="cancel_this_alarm">不再提示</string>
	<string name="rmb_mark">￥</string>
	
	<string name="auto_refresh_setting">自动刷新设置</string>
	<string name="auto_refresh_delta">自动刷新间隔</string>
	<!-- menu -->
	<string name="menu_priceOverview">行情一览</string>
	<string name="menu_tradeMarket">交易市场</string>
	
	<string name="menu_qqlogon">登陆交易(Pro)</string>
	<string name="menu_setting">设置</string>
	<string name="menu_quit">退出</string>
	
	<string name="msg_loginNotFinished">交易功能尚未开放(Beta)</string>
	<string name="msg_loginFirst">请登录后再交易</string>
	
	<string name="action_bar_share_with">截图分享</string>
	<string name="share_msg">BB看盘 www.bbkanpan.com</string>
</resources>
