<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
   <LinearLayout 
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buy"
            android:textSize="20sp"
            android:textColor="@color/green"/>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.chenxiaoyu.bbcoin.widget.AutofitTextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:text="@string/buyPrice"/>
            <com.chenxiaoyu.bbcoin.widget.AutofitTextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:text="@string/sumPrice"/>
        </LinearLayout>


        <LinearLayout 
            android:id="@+id/v_orders_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/line"
        />
    <LinearLayout 
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sell"
            android:textSize="20sp"
            android:textColor="@color/red"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.chenxiaoyu.bbcoin.widget.AutofitTextView  
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:text="@string/sellPrice"/>
            <com.chenxiaoyu.bbcoin.widget.AutofitTextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:text="@string/sumPrice"/>
        </LinearLayout>

         <LinearLayout 
            android:id="@+id/v_orders_sell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>
    </LinearLayout>
    

    

</LinearLayout>
